<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Cars</string>
    <string name="buy_button">Buy</string>
    <string name="sell_button">Sell</string>
    <string name="welcome_txt">Welcome to CarsCI</string>
    <string name="title_activity_selection_list">SelectionListActivity</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="price">Max Price</string>
    <string name="mileage">Mileage</string>
    <string name="owner">Owner</string>
    <string name="search">Search Cars</string>
    <string name="title_activity_sell">Sell a car</string>
</resources>
