<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity"
    android:divider="@android:drawable/divider_horizontal_textfield">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchUpRegion"
        android:showDividers="middle|end"
        android:orientation="vertical"
        android:divider="@android:drawable/divider_horizontal_textfield">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/make_title"
                android:text="@string/make"
                android:textSize="28dp"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/make_info"
                android:textAlignment="viewEnd"
                android:textSize="28dp"
                android:paddingRight="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/model_title"
                android:text="@string/model"
                android:textSize="28dp"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/model_info"
                android:textAlignment="viewEnd"
                android:textSize="28dp"
                android:paddingRight="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/year_title"
                android:text="@string/year"
                android:textSize="28dp"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/year_info"
                android:textAlignment="viewEnd"
                android:textSize="28dp"
                android:paddingRight="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/price_title"
                android:text="@string/price"
                android:textSize="28dp"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/price_info"
                android:textAlignment="viewEnd"
                android:textSize="28dp"
                android:paddingRight="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/mileage_title"
                android:text="@string/mileage"
                android:textSize="28dp"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/mileage_info"
                android:textAlignment="viewEnd"
                android:textSize="28dp"
                android:paddingRight="15dp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="10dp"
        android:text="@string/search"
        android:id="@+id/search_car"
        android:textSize="32dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_gravity="center"/>


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/testspinner">
    </Spinner>

</LinearLayout>